--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ main {
     padding: 0 1rem;
 }
 
+
+/* */
 .caption {
     padding: 0.8rem;
     text-align: center;
@@ -95,6 +97,8 @@ main {
     border-radius: var(--radius);
 }
 
+
+/* footer */
 footer {
     text-align: center;
     padding: 2rem 1rem;
@@ -104,6 +108,8 @@ footer h3 {
     margin-bottom: 0;
 }
 
+
+/* credits */
 #credits {
     display: flex;
     justify-content: center;
@@ -124,6 +130,9 @@ footer h3 {
     color: #C78E2D;
 }
 #credits a:hover {text-decoration: underline;}
+
+
+/* resposive */
 
 /* Screen sizes 500px and up */
 @media (min-width: 500px) {
