--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,7 @@ footer h3 {
     box-shadow: 30px 0px 40px rgba(0,0,0,0.1), 
     -30px 0px 40px rgba(0,0,0,0.1);
 }
-#credits p {
-    margin: .4rem 0;
-    font-size: .9rem;
-}
+#credits p {margin: .4rem 0;}
 #credits a {
     text-decoration: none;
     color: #C78E2D;
