--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ footer h3 {
 }
 #credits a {
   text-decoration: none;
-  color: #327345;
+  color: #06075a;
 }
 #credits a:hover {
   text-decoration: underline;
