heart color is important

--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,8 @@ footer h3 {
 #credits p {
   margin: 0.4rem 0;
 }
-#credits a {
+#credits a,
+#credits span {
   text-decoration: none;
   color: #06075a;
 }
