--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ main {
     -30px 0px 40px rgba(0, 0, 0, 0.1);
   border-radius: var(--radius);
 }
+a {
+  text-decoration: none;
+  color: black;
+}
 
 /* landing */
 #landing {
